Fix some translation mistack in zh-tw (Taiwanese Mandarin). 1."Knight" should be translated to "騎士", not "國王"(King). 2.Translate a file which didn't traslate before. The translation is base on TConstruct's branch "master" on Github. (2017/2/5 15:20 UTC+8)
Signed-off-by: GKB <gkbm2013@gmail.com>

--- a/resources/assets/tconstruct/lang/zh_TW.lang
+++ b/resources/assets/tconstruct/lang/zh_TW.lang
@@ -35,7 +35,7 @@ tile.tconstruct.ore.ardite.name=阿迪特礦
 tile.tconstruct.metal.cobalt.name=鈷塊
 tile.tconstruct.metal.ardite.name=阿迪特塊
 tile.tconstruct.metal.manyullyn.name=瑪玉靈塊
-tile.tconstruct.metal.knightslime.name=國王史萊姆塊
+tile.tconstruct.metal.knightslime.name=騎士史萊姆塊
 tile.tconstruct.metal.pigiron.name=生鐵塊
 tile.tconstruct.metal.alubrass.name=鋁黃銅塊
 tile.tconstruct.metal.silky_jewel.name=精緻珠寶塊
@@ -299,7 +299,7 @@ item.tconstruct.materials.creative_modifier.tooltip=增加額外的強化空間
 item.tconstruct.ingots.cobalt.name=鈷錠
 item.tconstruct.ingots.ardite.name=阿迪特錠
 item.tconstruct.ingots.manyullyn.name=瑪玉靈錠
-item.tconstruct.ingots.knightslime.name=國王史萊姆錠
+item.tconstruct.ingots.knightslime.name=騎士史萊姆錠
 item.tconstruct.ingots.knightslime.tooltip=黏黏的、有金屬的特質同時也是石頭? 真迷人!
 item.tconstruct.ingots.pigiron.name=生鐵錠
 item.tconstruct.ingots.pigiron.tooltip=嚄嚄!
@@ -308,7 +308,7 @@ item.tconstruct.ingots.alubrass.name=鋁黃銅錠
 item.tconstruct.nuggets.cobalt.name=鈷粒
 item.tconstruct.nuggets.ardite.name=阿迪特粒
 item.tconstruct.nuggets.manyullyn.name=瑪玉靈粒
-item.tconstruct.nuggets.knightslime.name=國王史萊姆粒
+item.tconstruct.nuggets.knightslime.name=騎士史萊姆粒
 item.tconstruct.nuggets.pigiron.name=生鐵粒
 item.tconstruct.nuggets.alubrass.name=鋁黃銅粒
 
@@ -524,7 +524,7 @@ material.firewood.name=燃燒木
 material.slime.name=史萊姆
 material.blueslime.name=藍色史萊姆
 material.blueslime.prefix=史萊姆%s
-material.knightslime.name=國王史萊姆
+material.knightslime.name=騎士史萊姆
 material.magmaslime.name=熔岩史萊姆
 material.ardite.name=阿迪特
 material.cobalt.name=鈷
