Update zh-tw Translation (Taiwanese Mandarin). 1.Update due to https://github.com/SlimeKnights/TinkersConstruct/pull/2761 .
Signed-off-by: GKB <gkbm2013@gmail.com>

--- a/resources/assets/tconstruct/lang/zh_TW.lang
+++ b/resources/assets/tconstruct/lang/zh_TW.lang
@@ -282,8 +282,8 @@ item.tconstruct.materials.expander_w.name=擴展器 (水平)
 item.tconstruct.materials.expander_w.tooltip=不要逃避健身的日子!
 item.tconstruct.materials.expander_h.name=擴展器 (垂直)
 item.tconstruct.materials.expander_h.tooltip=你有做重量訓練嗎?
-item.tconstruct.materials.reinforcement.name=增強
-item.tconstruct.materials.reinforcement.tooltip=增強強化
+item.tconstruct.materials.reinforcement.name=耐久增強板
+item.tconstruct.materials.reinforcement.tooltip=加強的強化
 item.tconstruct.materials.silky_cloth.name=絹布
 item.tconstruct.materials.silky_jewel.name=精緻珠寶
 item.tconstruct.materials.silky_jewel.tooltip=絲綢之觸強化
